Fix column widths on small screen sizes

--- a/docs/style.css
+++ b/docs/style.css
@@ -72,6 +72,7 @@ select:active {
 
 .column {
     min-width: 50%;
+    flex-grow: 1;
 }
 
 
